--- a/loyer/the2pages/page1.html
+++ b/loyer/the2pages/page1.html
@@ -8,9 +8,9 @@
         <div class="divofmain1">
             <img src="../images/logo.jfif" alt="logo" class="logoimage">
 
-            <h1 class="logoname">LOYER.ma</h1>
+            <h1 class="logoname" href='propage.php'>LOYER.ma</h1>
         </div>
-        <div class="divofmain2">
+        <div class="divofmain2" >
             <a href="#">HOME</a>
             <a href="#">ABOUT US</a>
             <a href="#">CONTACT</a>
@@ -32,9 +32,13 @@
             <input type="number" name="minval" id="minval" placeholder="min prix">
             <input type="number" name="maxval" id="maxval"  placeholder="max prix">
             <a href="#"></a>
+            <img src="" alt="">
             
 
         </form>
     </div>
 </body>
+<script>
+    document.getElementById('')
+</script>
 </html>
