--- a/loyer/the2pages/page1.html
+++ b/loyer/the2pages/page1.html
@@ -27,8 +27,8 @@
         </div>
     </header>
     <div class="resdiv">
-        <form action="#">
-            <input type="text" name="ville" id="ville" placeholder="ville">
+        <form action="#" method="post">
+            <input type="text" name="ville" id="ville" placeholder="ville" required>
             <input type="number" name="minval" id="minval" placeholder="min prix">
             <input type="number" name="maxval" id="maxval"  placeholder="max prix">
             <a href="#"></a>
