--- a/loyer/the2pages/page1.html
+++ b/loyer/the2pages/page1.html
@@ -39,6 +39,7 @@
     </div>
 </body>
 <script>
-    document.getElementById('')
+    const pg = document.querySelector('.amin');
+    pg.style.display = "block";
 </script>
 </html>
